message part added, validation is working and almost completed

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,10 @@
-NotEmpty = {0} can't be empty.
+NotEmpty = {0} can not be empty.
+NotNull = {0} can not be null.
+Email = {0} is required field.
+Size = {0} size must be between {2} and {1}.
+
+firstName = First Name
+lastName = Last Name
+message = Message
+email = Email
+phone = Phone
